# ims

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/alembic/: env.py  script.py.mako
app/alembic/versions/: 0001_initial_tables.py
app/api/endpoints/: analytics.py  auth.py  bales.py  categories.py  customers.py  payments.py  sales.py  users.py
app/core/: config.py  deps.py  persimissions.py  roles.py  security.py
app/db/: base.py  seed.py  session.py
app/models/: __init__.py  bale.py  bale_item.py  category.py  customer.py  inventory.py  payment.py  sale.py  sale_item.py  user.py
app/schemas/: __init__.py  analytics.py  bale.py  category.py  customer.py  generic.py  payment.py  sale.py  user.py
app/services/: analytics.py  bales.py  categories.py  customers.py  payments.py  sales.py  users.py
frontend/: .env.example  .prettierrc  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  pwa-assets.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  PWABadge.css  PWABadge.tsx  index.css  main.tsx
frontend/src/components/: AppSidebar.tsx  DashboardLayout.tsx  GetAppButton.tsx  NavLink.tsx  ProtectedRoute.tsx  RoleProtectedRoute.tsx  SafeAreaDebug.tsx  StatCard.tsx  ThemeToggle.tsx  ZeroState.tsx  theme-provider.tsx
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_tables.py
tests/: test_analytics.py  test_health.py
(+46 files in other folders)
